# omara-cli

./: Cargo.toml  README.md
src/: main.rs  paths.rs
src/commands/: app.rs  config.rs  doctor.rs  help.rs  info.rs  log.rs  mod.rs  os.rs  screensaver.rs  session.rs  system.rs  theme.rs  update.rs  wallpaper.rs
