[package]
name = "omara"
version = "0.1.0"
edition = "2021"
authors = ["Omara Labs <hello@omara.dev>"]
description = "The official Omara command-line tool"
license = "MIT"
repository = "https://github.com/omara-labs/omara-core"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
shellexpand = "3.1"
chrono = "0.4"
